Update Resources page

--- a/static/Resources/index.html
+++ b/static/Resources/index.html
@@ -4,57 +4,60 @@
     <p>The AQP publishes materials for public use. Please download and share!
     </p>
 
+    <h3>Brochures &amp; Handouts</h3>
     <ul class="list-group">
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/tips.pdf">Actions You Can Take</a>
-            <span class="sm">[0.1 MB pdf]</span>
-        </li>
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/AQP_Brochure_for_Children.pdf">Brochure: Children and Air Quality</a>
-            <span class="sm">[4.9 MB pdf]</span>
-        </li>
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/AQP_Brochure_for_OlderAdults.pdf">Brochure: Older Adults and Air Quality</a>
-            <span class="sm">[5.5 MB pdf]</span>
-        </li>
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/AQP_Brochure_for_Business.pdf">Brochure: Your Business and Air Quality</a>
-            <span class="sm">[5.5 MB pdf]</span>
-        </li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/tips.pdf">Actions You Can Take</a> <span class="sm">[0.1
+                MB pdf]</span></li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_Brochure_for_Children.pdf">Children and Air Quality</a>
+            <span class="sm">[4.9 MB pdf]</span></li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_Brochure_for_OlderAdults.pdf">Older Adults and Air
+                Quality</a> <span class="sm">[5.5 MB pdf]</span></li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_Brochure_for_Business.pdf">Your Business and Air Quality</a>
+            <span class="sm">[5.5 MB pdf]</span></li>
+    </ul>
+
+    <h3>Posters</h3>
+    <ul class="list-group">
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_PAConstitution_BusShelter.pdf">Bus Shelter: PA Constitution/Walk,
+                Bike, and Take Transit</a> <span class="sm">[0.3 MB pdf]</span></li>
+    </ul>
+
+    <h3>Social Media Graphics</h3>
+    <ul class="list-group">
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_Tips.zip">5 Tips for Improving Air Quality</a> <span
+                class="sm">[9.9 MB zip]</span></li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_PAConstitution_SocialMedia.png">PA Constitution/Walk,
+                Bike, and Take Transit</a> <span class="sm">[1.1 MB png]</span></li>
     </ul>
 
     <h3>Tools for Businesses</h3>
     <ul class="list-group">
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/AQP_Desk_display_tent_card.pdf">Tent Cards</a>
-            <span class="sm">[1.3 MB pdf]</span>
-        </li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/AQP_Desk_display_tent_card.pdf">Tent Cards</a> <span class="sm">[1.3
+                MB pdf]</span></li>
         <!--<li class="list-group-item"><a target="_blank" href="/pdf/.pdf">Social Media Posts for Action Days</a> <span class="sm">[0.1 MB pdf]</span></li>-->
-        <li class="list-group-item">
-            <a target="_blank" href="http://www.dvrpc.org/MobilityAlternatives/Contacts/">Find Your Local TMA</a>
-        </li>
+        <li class="list-group-item"><a target="_blank" href="https://www.dvrpc.org/MobilityAlternatives/Contacts/">Find Your
+                Local TMA</a></li>
     </ul>
 
-    <h3>Tool for Schools</h3>
+    <h3>Tools for Schools</h3>
     <ul class="list-group">
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/Air_Quality_and_Outdoor_Activity_Guidance.pdf">Air Quality and Outdoor Activity Guidance for Schools</a>
-            <span class="sm">[0.1 MB pdf]</span>
-        </li>
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/WheresMike_print_11x17.pdf">Workbook for Kids: "Where's Mike?"</a>
-            <span class="sm">[2.6 MB pdf]</span>
-        </li>
-        <li class="list-group-item">
-            <a target="_blank" href="/pdf/Wheres_Mike_Teacher_Guide.pdf">Workbook for Kids: "Where's Mike?" Teacher’s Guide</a>
-            <span class="sm">[0.8 MB pdf]</span>
-        </li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/Air_Quality_and_Outdoor_Activity_Guidance.pdf">Air Quality
+                and Outdoor Activity Guidance for Schools</a> <span class="sm">[0.1 MB pdf]</span></li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/WheresMike_print_11x17.pdf">Workbook for Kids: "Where's
+                Mike?"</a> <span class="sm">[2.6 MB pdf]</span></li>
+        <li class="list-group-item"><a target="_blank" href="/pdf/Wheres_Mike_Teacher_Guide.pdf">Workbook for Kids: "Where's
+                Mike?" Teacher’s Guide</a> <span class="sm">[0.8 MB pdf]</span></li>
     </ul>
 
-    <p>The AQP is proud to provide the "Where's Mike?" air quality activity workbook for kids. The workbook was designed with
-        the input of educators, school district curriculum committee members, and health and planning professionals to introduce
-        students to the concepts of air pollution, and it may impact children's health. It also offers suggestions about
-        how students and their families can prevent air pollution and protect their health using air quality forecasts provided
-        by federal, state, and local government resources.
+    <p>The AQP is proud to provide the "Where's Mike?" air quality activity workbook for kids. The workbook was designed
+        with the input of educators, school district curriculum committee members, and health and planning professionals
+        to introduce students to the concepts of air pollution, and it may impact children's health. It also offers suggestions
+        about how students and their families can prevent air pollution and protect their health using air quality forecasts
+        provided by federal, state, and local government resources.
     </p>
+
+    <ul class="list-group" style="margin-bottom: -16px;">
+        <li class="list-group-item"><a target="_blank" href="https://www.ahs.dep.pa.gov/AQPartnersWeb/calendar.aspx">Air
+                Quality Forecast Archives</a></li>
+    </ul>
 </div>
