Add GreenCommute page

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,9 @@
           <span class=" icon-close"></span>
         </button>
         <div class="drawer-list">
+            <a class="drawer-list-item" href="/GreenCommute/" style="padding: .5em 1em;">
+              <div style="text-transform: none;">#GreenCommute</div>Photo Contest
+            </a>
           <a class="drawer-list-item" href="/About/">
             About
           </a>
