Add GreenCommute Rules page

--- a/static/GreenCommute/index.html
+++ b/static/GreenCommute/index.html
@@ -12,7 +12,7 @@
   <p>
     Four photo submissions will be entered into a random drawing for one of four
     $50 Dunkin Donuts gift cards. Winners will be randomly selected on June 21,
-    2019. Click here for giveaway details.
+    2019. <a href="Rules/">Click here for giveaway details</a>.
   </p>
   <h3>See what others have shared so far!</h3>
   <script
