Add campaign tracking

--- a/src/index.html
+++ b/src/index.html
@@ -1,181 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://pixel.sitescout.com" />
+    <link rel="preconnect" href="https://pixel-a.basis.net" />
+    <link rel="preconnect" href="https://www.google-analytics.com" />
+    <link rel="preconnect" href="https://adservice.google.com" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Air Quality Partnership</title>
+    <meta
+      name="description"
+      content="A public/private coalition provided by DVRPC dedicated to improving air quality in the Delaware Valley through air quality initiatives and advisories."
+    />
+    <meta name="theme-color" content="#0078ae" />
+    <link rel="manifest" href="/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Marketing Platform -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=DC-9329039"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Air Quality Partnership</title>
-  <meta name="description" content="A public/private coalition provided by DVRPC dedicated to improving air quality in the Delaware Valley through air quality initiatives and advisories.">
-  <meta name="theme-color" content="#0078ae">
-  <link rel="manifest" href="/manifest.json">
-</head>
+      function gtag() {
+        dataLayer.push(arguments);
+      }
 
-<body>
-  <header>
-    <div>
-      <section>
-        <button class="demo-menu" aria-label="menu">
-          <span class="icon-menu"></span>
-        </button>
-      </section>
-      <section class="logo">
-        <a rel="noopener" href="https://www.dvrpc.org/" target="_blank" style="border-right: 1px solid #aaa;">
-          <img src="/img/dvrpc.png" alt="Delaware Valley Regional Planning Commission" width="162">
-        </a>
-        <a href="/" data-root>
-          <img src="/img/aqp.png" alt="Air Quality Partnership">
-        </a>
-      </section>
-    </div>
-  </header>
-  <div class="content">
-    <aside class="drawer">
-      <nav class="drawer__drawer">
-        <button class="drawer__close-btn" aria-label="close">
-          <span class=" icon-close"></span>
-        </button>
-        <div class="drawer-list">
-            <a class="drawer-list-item" href="/GreenCommute/" style="padding: .5em 1em;">
-              <div style="text-transform: none;">#GreenCommute</div>Photo Contest
+      gtag("js", new Date());
+      gtag("config", "DC-9329039");
+      gtag("event", "conversion", {
+        allow_custom_scripts: true,
+        send_to: "DC-9329039/retar0/dvrpc0+standard"
+      });
+    </script>
+    <noscript>
+      <img
+        src="https://ad.doubleclick.net/ddm/activity/src=9329039;type=retar0;cat=dvrpc0;dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;tfua=;npa=;ord=1?"
+        width="1"
+        height="1"
+        alt=""
+      />
+    </noscript>
+    <!-- End of event snippet: Please do not remove -->
+  </head>
+
+  <body>
+    <header>
+      <div>
+        <section>
+          <button class="demo-menu" aria-label="menu">
+            <span class="icon-menu"></span>
+          </button>
+        </section>
+        <section class="logo">
+          <a
+            rel="noopener"
+            href="https://www.dvrpc.org/"
+            target="_blank"
+            style="border-right: 1px solid #aaa;"
+          >
+            <img
+              src="/img/dvrpc.png"
+              alt="Delaware Valley Regional Planning Commission"
+              width="162"
+            />
+          </a>
+          <a href="/" data-root>
+            <img src="/img/aqp.png" alt="Air Quality Partnership" />
+          </a>
+        </section>
+      </div>
+    </header>
+    <div class="content">
+      <aside class="drawer">
+        <nav class="drawer__drawer">
+          <button class="drawer__close-btn" aria-label="close">
+            <span class=" icon-close"></span>
+          </button>
+          <div class="drawer-list">
+            <a
+              class="drawer-list-item"
+              href="/GreenCommute/"
+              style="padding: .5em 1em;"
+            >
+              <div style="text-transform: none;">#GreenCommute</div>
+              Photo Contest
             </a>
-          <a class="drawer-list-item" href="/About/">
-            About
-          </a>
-          <a class="drawer-list-item" href="/News/">
-            News
-          </a>
-          <a class="drawer-list-item" href="/Resources/">
-            Resources
-          </a>
-          <a class="drawer-list-item" href="http://delawarevalley.enviroflash.info/signup.cfm" rel="noopener" target="_blank">
-            Sign Up for Alerts
-          </a>
-        </div>
-      </nav>
-      <footer>
-        <div>
-          <p>
-            <a href="mailto:sgreene@dvrpc.org">sgreene@dvrpc.org</a> | 215.238.2860
-            <br/>
-            <a rel="noopener" href="https://www.dvrpc.org/GetInvolved/TitleVI/">Title VI Statement</a>
-          </p>
-          <p>
-            <small>Copyright &copy; 2006-
-              <span class="current-year"></span> Air Quality Partnership
-              <br/>
-              <i>Last Updated:
-                <span class="last-updated"></span>
-              </i>
-            </small>
-          </p>
-        </div>
-      </footer>
-    </aside>
-    <main>
-      <div class="forecast-grid">
-        <div class="forecast__prev">
-          <a class="forecast__link--prev" href="#">
-            <span class="icon-left"></span>
-            <div class="rotate-left">
-              <span>YESTERDAY</span>
+            <a class="drawer-list-item" href="/About/">
+              About
+            </a>
+            <a class="drawer-list-item" href="/News/">
+              News
+            </a>
+            <a class="drawer-list-item" href="/Resources/">
+              Resources
+            </a>
+            <a
+              class="drawer-list-item"
+              href="http://delawarevalley.enviroflash.info/signup.cfm"
+              rel="noopener"
+              target="_blank"
+            >
+              Sign Up for Alerts
+            </a>
+          </div>
+        </nav>
+        <footer>
+          <div>
+            <p>
+              <a href="mailto:sgreene@dvrpc.org">sgreene@dvrpc.org</a> |
+              215.238.2860
+              <br />
+              <a
+                rel="noopener"
+                href="https://www.dvrpc.org/GetInvolved/TitleVI/"
+                >Title VI Statement</a
+              >
+            </p>
+            <p>
+              <small
+                >Copyright &copy; 2006- <span class="current-year"></span> Air
+                Quality Partnership
+                <br />
+                <i
+                  >Last Updated:
+                  <span class="last-updated"></span>
+                </i>
+              </small>
+            </p>
+          </div>
+        </footer>
+      </aside>
+      <main>
+        <div class="forecast-grid">
+          <div class="forecast__prev">
+            <a class="forecast__link--prev" href="#">
+              <span class="icon-left"></span>
+              <div class="rotate-left">
+                <span>YESTERDAY</span>
+              </div>
+            </a>
+          </div>
+          <div class="forecast__next">
+            <a class="forecast__link--next" href="#">
+              <div class="rotate-right">
+                <span>TOMORROW</span>
+              </div>
+              <span class="icon-right"></span>
+            </a>
+          </div>
+          <div class="forecast-grid__content">
+            <div class="swiper-container">
+              <div class="swiper-wrapper"></div>
             </div>
-          </a>
-        </div>
-        <div class="forecast__next">
-          <a class="forecast__link--next" href="#">
-            <div class="rotate-right">
-              <span>TOMORROW</span>
-            </div>
-            <span class="icon-right"></span>
-          </a>
-        </div>
-        <div class="forecast-grid__content">
-          <div class="swiper-container">
-            <div class="swiper-wrapper"></div>
           </div>
         </div>
-      </div>
-      <div class="forecast-details">
-        <div class="forecast-details__panel">
-          <a href="#" onclick="tipsLink.call(this, event);return false;" class="forecast-details__link forecast-details__link--action">
-            Take Action
-          </a>
-          <div class="forecast-details-panel">
-            <button class="forecast-details-panel__close-btn" aria-label="close">
-              <span class="icon-close"></span>
-            </button>
-            <h2>Take Action</h2>
-            <ul class="list-group">
-              <li class="list-group-item visible--good visible--moderate visible--sensitive visible--unhealthy">Take transit or rideshare.
-                <small>Ride the bus, train, subway or carpool to work or school.</small>
-              </li>
-              <li class="list-group-item visible--sensitive visible--unhealthy">Telecommute.
-                <small>Work from home on Air Quality Action days and spend your extra commute hours with your family.</small>
-              </li>
-              <li class="list-group-item visible--moderate">Trip-link.
-                <small>Do all of you errands in one trip, avoiding unnecessary cold starts.</small>
-              </li>
-              <li class="list-group-item visible--sensitive visible--unhealthy">Refuel at the end of the day.
-                <small>Ozone levels are usually highest in mid to late afternoon.</small>
-              </li>
-              <li class="list-group-item visible--good visible--moderate">Don’t “top off” your tank when refueling.
-                <small>Spillage adds two tons of air pollution daily.</small>
-              </li>
-              <li class="list-group-item visible--sensitive visible--unhealthy">Postpone mowing the lawn.
-                <small>Late in the day or on a day when air quality is better. Remember to fill your gas tanks after dusk too.</small>
-              </li>
-              <li class="list-group-item visible--moderate">Use wood stoves and fire places wisely and sparingly.
-                <small>Burn only untreated hard wood in a properly maintained woodstove or fireplace.</small>
-              </li>
-              <li class="list-group-item visible--good">Refrain from burning trash or yard waste.</li>
-              <li class="list-group-item visible--good visible--moderate">Conserve energy at home.
-                <small>Set the thermostat lower in the winter and high in the summer. Conserving energy not only helps air quality,
-                  it also saves you money.</small>
-              </li>
-              <li class="list-group-item visible--good visible--moderate">Get regular tune-ups and car maintenance checks.
-                <small>A properly running vehicle emits less pollution and saves gas.</small>
-              </li>
-              <li class="list-group-item visible--moderate">Turn it off.
-                <small>Idling your vehicle wastes gas and pollutes the air.</small>
-              </li>
-              <li class="list-group-item visible--good">Join your local Transportation Management Association.
-                <small>Your TMA can provide tips and advice on reduce pollution from your commute.</small>
-              </li>
-              <li class="list-group-item visible--sensitive visible--unhealthy">Avoid harmful fumes.
-                <small>Using oil-based paints, solvents, cleaners, varnishes, or other household and personal products that cause
-                  fumes can be hazardous.</small>
-              </li>
-              <li class="list-group-item visible--good visible--moderate">Keep the right amount of air in the tires.
-                <small>Proper tire pressure saves gas and the air.</small>
-              </li>
-              <li class="list-group-item visible--sensitive visible--unhealthy">Use teleconferencing instead of driving to meetings.</li>
-            </ul>
+        <div class="forecast-details">
+          <div class="forecast-details__panel">
+            <a
+              href="#"
+              onclick="tipsLink.call(this, event);return false;"
+              class="forecast-details__link forecast-details__link--action"
+            >
+              Take Action
+            </a>
+            <div class="forecast-details-panel">
+              <button
+                class="forecast-details-panel__close-btn"
+                aria-label="close"
+              >
+                <span class="icon-close"></span>
+              </button>
+              <h2>Take Action</h2>
+              <ul class="list-group">
+                <li
+                  class="list-group-item visible--good visible--moderate visible--sensitive visible--unhealthy"
+                >
+                  Take transit or rideshare.
+                  <small
+                    >Ride the bus, train, subway or carpool to work or
+                    school.</small
+                  >
+                </li>
+                <li
+                  class="list-group-item visible--sensitive visible--unhealthy"
+                >
+                  Telecommute.
+                  <small
+                    >Work from home on Air Quality Action days and spend your
+                    extra commute hours with your family.</small
+                  >
+                </li>
+                <li class="list-group-item visible--moderate">
+                  Trip-link.
+                  <small
+                    >Do all of you errands in one trip, avoiding unnecessary
+                    cold starts.</small
+                  >
+                </li>
+                <li
+                  class="list-group-item visible--sensitive visible--unhealthy"
+                >
+                  Refuel at the end of the day.
+                  <small
+                    >Ozone levels are usually highest in mid to late
+                    afternoon.</small
+                  >
+                </li>
+                <li class="list-group-item visible--good visible--moderate">
+                  Don’t “top off” your tank when refueling.
+                  <small>Spillage adds two tons of air pollution daily.</small>
+                </li>
+                <li
+                  class="list-group-item visible--sensitive visible--unhealthy"
+                >
+                  Postpone mowing the lawn.
+                  <small
+                    >Late in the day or on a day when air quality is better.
+                    Remember to fill your gas tanks after dusk too.</small
+                  >
+                </li>
+                <li class="list-group-item visible--moderate">
+                  Use wood stoves and fire places wisely and sparingly.
+                  <small
+                    >Burn only untreated hard wood in a properly maintained
+                    woodstove or fireplace.</small
+                  >
+                </li>
+                <li class="list-group-item visible--good">
+                  Refrain from burning trash or yard waste.
+                </li>
+                <li class="list-group-item visible--good visible--moderate">
+                  Conserve energy at home.
+                  <small
+                    >Set the thermostat lower in the winter and high in the
+                    summer. Conserving energy not only helps air quality, it
+                    also saves you money.</small
+                  >
+                </li>
+                <li class="list-group-item visible--good visible--moderate">
+                  Get regular tune-ups and car maintenance checks.
+                  <small
+                    >A properly running vehicle emits less pollution and saves
+                    gas.</small
+                  >
+                </li>
+                <li class="list-group-item visible--moderate">
+                  Turn it off.
+                  <small
+                    >Idling your vehicle wastes gas and pollutes the air.</small
+                  >
+                </li>
+                <li class="list-group-item visible--good">
+                  Join your local Transportation Management Association.
+                  <small
+                    >Your TMA can provide tips and advice on reduce pollution
+                    from your commute.</small
+                  >
+                </li>
+                <li
+                  class="list-group-item visible--sensitive visible--unhealthy"
+                >
+                  Avoid harmful fumes.
+                  <small
+                    >Using oil-based paints, solvents, cleaners, varnishes, or
+                    other household and personal products that cause fumes can
+                    be hazardous.</small
+                  >
+                </li>
+                <li class="list-group-item visible--good visible--moderate">
+                  Keep the right amount of air in the tires.
+                  <small>Proper tire pressure saves gas and the air.</small>
+                </li>
+                <li
+                  class="list-group-item visible--sensitive visible--unhealthy"
+                >
+                  Use teleconferencing instead of driving to meetings.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="forecast-details__panel">
+            <a
+              rel="noopener"
+              href="http://delawarevalley.enviroflash.info/signup.cfm"
+              class="forecast-details__link mobile-only"
+              target="_blank"
+            >
+              Sign Up for Alerts
+            </a>
           </div>
         </div>
-        <div class="forecast-details__panel">
-          <a rel="noopener" href="http://delawarevalley.enviroflash.info/signup.cfm" class="forecast-details__link mobile-only" target="_blank">
-            Sign Up for Alerts
-          </a>
-        </div>
-      </div>
-      <div class="content-panel"></div>
-    </main>
-  </div>
-  <footer>
-    <div>
-      <p class="adjust-col">
-        <a href="mailto:sgreene@dvrpc.org">sgreene@dvrpc.org</a> | 215.238.2860 |
-        <a rel="noopener" href="https://www.dvrpc.org/GetInvolved/TitleVI/">Title VI Statement</a>
-        <br/>
-        <small>Copyright © 2006-
-          <span class="current-year"></span> Air Quality Partnership |
-          <i>Last Updated:
-            <span class="last-updated"></span>
-          </i>
-        </small>
-      </p>
+        <div class="content-panel"></div>
+      </main>
     </div>
-  </footer>
-</body>
-
+    <footer>
+      <div>
+        <p class="adjust-col">
+          <a href="mailto:sgreene@dvrpc.org">sgreene@dvrpc.org</a> |
+          215.238.2860 |
+          <a rel="noopener" href="https://www.dvrpc.org/GetInvolved/TitleVI/"
+            >Title VI Statement</a
+          >
+          <br />
+          <small
+            >Copyright © 2006- <span class="current-year"></span> Air Quality
+            Partnership |
+            <i
+              >Last Updated:
+              <span class="last-updated"></span>
+            </i>
+          </small>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
