--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://pixel-a.basis.net" />
     <link rel="preconnect" href="https://www.google-analytics.com" />
     <link rel="preconnect" href="https://adservice.google.com" />
+    <link rel="preconnect" href="https://9329039.fls.doubleclick.net" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Air Quality Partnership</title>
     <meta
