Replace News wth Clean Driving Tips

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,8 @@
             <a class="drawer-list-item" href="/About/">
               About
             </a>
-            <a class="drawer-list-item" href="/News/">
-              News
+            <a class="drawer-list-item" href="/CleanDriving/">
+              Clean Driving Tips
             </a>
             <a class="drawer-list-item" href="/Resources/">
               Resources
