--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       gtag("config", "DC-9329039");
       gtag("event", "conversion", {
         allow_custom_scripts: true,
-        send_to: "DC-9329039/retar0/dvrpc0+standard"
+        send_to: "DC-9329039/retar0/dvrpc0+standard",
       });
     </script>
     <noscript>
@@ -58,7 +58,7 @@
             rel="noopener"
             href="https://www.dvrpc.org/"
             target="_blank"
-            style="border-right: 1px solid #aaa;"
+            style="border-right: 1px solid #aaa"
           >
             <img
               src="/img/dvrpc.png"
@@ -76,18 +76,14 @@
       <aside class="drawer">
         <nav class="drawer__drawer">
           <button class="drawer__close-btn" aria-label="close">
-            <span class=" icon-close"></span>
+            <span class="icon-close"></span>
           </button>
           <div class="drawer-list">
-            <a class="drawer-list-item" href="/About/">
-              About
-            </a>
+            <a class="drawer-list-item" href="/About/"> About </a>
             <a class="drawer-list-item" href="/CleanDriving/">
               Clean Driving Tips
             </a>
-            <a class="drawer-list-item" href="/Resources/">
-              Resources
-            </a>
+            <a class="drawer-list-item" href="/Resources/"> Resources </a>
             <a
               class="drawer-list-item"
               href="http://delawarevalley.enviroflash.info/signup.cfm"
