Update spanish resources link

--- a/src/index.html
+++ b/src/index.html
@@ -84,8 +84,8 @@
               Clean Driving Tips
             </a>
             <a class="drawer-list-item" href="/Resources/"> Resources </a>
-            <a class="drawer-list-item" href="/Recursos/">
-              Spanish Resources
+            <a class="drawer-list-item" href="/Recursos/" lang="es">
+              Los Recursos
             </a>
             <a
               class="drawer-list-item"
@@ -303,11 +303,7 @@
           <br />
           <small
             >Copyright © 2006- <span class="current-year"></span> Air Quality
-            Partnership |
-            <i
-              >Last Updated:
-              <span class="last-updated"></span>
-            </i>
+            Partnership
           </small>
         </p>
       </div>
